# lab6

./: CMakeLists.txt  main.cpp
myvector/: CMakeLists.txt  myvector.h
polinomials/: CMakeLists.txt  polinomials.h
